feat: 🎸 fixed search bar image

--- a/index.html
+++ b/index.html
@@ -58,20 +58,12 @@
             for="search-input-area"
             class="flex items-center justify-center rounded-3xl border-2 border-sky-300"
           >
-            <input
-              type="text"
-              name="search-input-area"
-              id="search-input-area"
-              class="w-full rounded-l-3xl py-2 pl-5 outline-none"
-              placeholder="搜尋..."
-              aria-label="請輸入搜尋"
-            />
             <p
               type="submit"
               id="search-btn"
-              class="w-16 rounded-r-2xl border-0 bg-sky-300 py-2 px-4 outline-none"
+              class="w-16 rounded-r-2xl border-0 py-2 px-4 outline-none"
             >
-              <span class="text-white">
+              <span class="text-gray-400">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="currentColor"
@@ -84,6 +76,14 @@
                 </svg>
               </span>
             </p>
+            <input
+              type="text"
+              name="search-input-area"
+              id="search-input-area"
+              class="w-full rounded-r-3xl py-2 pl-1 outline-none"
+              placeholder="搜尋..."
+              aria-label="請輸入搜尋"
+            />
           </label>
           <div id="show-complete-area" class="self-end px-3 md:self-center">
             <label
